--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
+    "eslint-plugin-readable-tailwind": "^1.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
