--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@types/react-helmet": "^6.1.11",
     "eslint-plugin-readable-tailwind": "^1.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
