--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@headlessui/react": "^2.2.0",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@types/react-helmet": "^6.1.11",
+    "@vercel/analytics": "^1.4.0",
     "eslint-plugin-readable-tailwind": "^1.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
